syntax = "proto3";

option go_package = "github.com/virtual-disk-array/vda/pkg/proto/portalapi";

package portalapi;

service Portal {
  rpc CreateDn(CreateDnRequest) returns(CreateDnReply) {}
  rpc DeleteDn(DeleteDnRequest) returns(DeleteDnReply) {}
  rpc ModifyDn(ModifyDnRequest) returns(ModifyDnReply) {}
  rpc ListDn(ListDnRequest) returns(ListDnReply) {}
  rpc GetDn(GetDnRequest) returns(GetDnReply) {}
  rpc SyncupDn(SyncupDnRequest) returns (SyncupDnReply) {}
  rpc CreatePd(CreatePdRequest) returns(CreatePdReply) {}
  rpc DeletePd(DeletePdRequest) returns(DeletePdReply) {}
  rpc ModifyPd(ModifyPdRequest) returns(ModifyPdReply) {}
  rpc ListPd(ListPdRequest) returns(ListPdReply) {}
  rpc GetPd(GetPdRequest) returns(GetPdReply) {}
  rpc CreateCn(CreateCnRequest) returns(CreateCnReply) {}
  rpc DeleteCn(DeleteCnRequest) returns(DeleteCnReply) {}
  rpc ModifyCn(ModifyCnRequest) returns(ModifyCnReply) {}
  rpc ListCn(ListCnRequest) returns (ListCnReply) {}
  rpc GetCn(GetCnRequest) returns (GetCnReply) {}
  rpc SyncupCn(SyncupCnRequest) returns (SyncupCnReply) {}
  rpc CreateDa(CreateDaRequest) returns (CreateDaReply) {}
  rpc DeleteDa(DeleteDaRequest) returns (DeleteDaReply) {}
  rpc ModifyDa(ModifyDaRequest) returns (ModifyDaReply) {}
  rpc ListDa(ListDaRequest) returns (ListDaReply) {}
  rpc GetDa(GetDaRequest) returns (GetDaReply) {}
  rpc CreateExp(CreateExpRequest) returns (CreateExpReply) {}
  rpc DeleteExp(DeleteExpRequest) returns (DeleteExpReply) {}
  rpc ModifyExp(ModifyExpRequest) returns (ModifyExpReply) {}
  rpc ListExp(ListExpRequest) returns (ListExpReply) {}
  rpc GetExp(GetExpRequest) returns (GetExpReply) {}
  rpc CreateSnap(CreateSnapRequest) returns (CreateSnapReply) {}
  rpc DeleteSnap(DeleteSnapRequest) returns (DeleteSnapReply) {}
  rpc ModifySnap(ModifySnapRequest) returns (ModifySnapReply) {}
  rpc ListSnap(ListSnapRequest) returns (ListSnapReply) {}
  rpc GetSnap(GetSnapRequest) returns (GetSnapReply) {}
  rpc CreateMt(CreateMtRequest) returns (CreateMtReply) {}
  rpc CancelMt(CancelMtRequest) returns (CancelMtReply) {}
  rpc ModifyMt(ModifyMtRequest) returns (ModifyMtReply) {}
  rpc ListMt(ListMtRequest) returns (ListMtReply) {}
  rpc GetMt(GetMtRequest) returns (GetMtReply) {}
  rpc CreateIt(CreateItRequest) returns (CreateItReply) {}
  rpc CancelIt(CancelItRequest) returns (CancelItReply) {}
  rpc ModifyIt(ModifyItRequest) returns (ModifyItReply) {}
  rpc ListIt(ListItRequest) returns (ListItReply) {}
  rpc GetIt(GetItRequest) returns (GetItReply) {}
  rpc GetClusterSummary(GetClusterSummaryRequest) returns (GetClusterSummaryReply) {}
}

message ReplyInfo {
  string req_id = 1;
  uint32 reply_code = 2;
  string reply_msg = 3;
}

message SyncupDnRequest {
  string sock_addr = 1;
}

message SyncupDnReply {
  ReplyInfo reply_info = 1;
}

message SyncupCnRequest {
  string sock_addr = 1;
}

message SyncupCnReply {
  ReplyInfo reply_info = 1;
}

message ErrInfo {
  bool is_err = 1;
  string err_msg = 2;
  string timestamp = 3;
}

message LvsConf {
  uint32 cluster_size = 1;
  uint32 extend_ratio = 2;
}

message LvsInfo {
  uint64 total_data_clusters = 2;
  uint64 free_clusters = 3;
}

message Raid0Conf {
  uint32 strip_size_kb = 1;
  uint32 bdev_cnt = 2;
}

message Raid1Conf {
  uint32 bit_size_kb = 1;
}

message Raid1Info {
  bool bdev0_online = 1;
  bool bdev1_online = 2;
  uint64 total_bit = 3;
  uint64 synced_bit = 4;
  uint64 resync_io_cnt = 5;
  string status =  6;
}

message TaskDescriptor {
  string start_time = 1;
  string stop_time = 2;
  uint64 keep_seconds = 3;
  string status = 4;
}

message NvmfListener {
  string tr_type = 1;
  string adr_fam = 2;
  string tr_addr = 3;
  string tr_svc_id = 4;
}

message BdevMalloc {
  uint64 size = 1;
}

message BdevAio {
  string file_name = 1;
}

message BdevNvme {
  string tr_addr = 1;
}

message BdevIostat {
  uint64 tick_rate = 1;
  uint64 bytes_read = 2;
  uint64 num_read_ops = 3;
  uint64 bytes_written = 4;
  uint64 num_write_ops = 5;
  uint64 bytes_unmapped = 6;
  uint64 num_unmap_ops = 7;
  uint64 read_latency_ticks = 8;
  uint64 write_latency_ticks = 9;
  uint64 unmap_latency_ticks = 10;
  uint64 queue_depth_polling_period = 11;
  uint64 queue_depth = 12;
  uint64 io_time = 13;
  uint64 weighted_io_time = 14;
}

message BdevHistgram {
  string histogram = 1;
  uint64 tsc_rate = 2;
  uint32 bucket_shift = 3;
}

message Lvstore {
  uint64 free_clusters = 1;
  uint64 total_data_clusters = 2;
  uint64 cluster_size = 3;
  uint64 block_size = 4;
}

message BdevQos {
  uint64 rw_ios_per_sec = 1;
  uint64 rw_mbytes_per_sec = 2;
  uint64 r_mbytes_per_sec = 3;
  uint64 w_mbytes_per_sec = 4;
}

message DiskNode {
  string dn_id = 1;
  string sock_addr = 2;
  uint64 version = 3;
  string description = 4;
  NvmfListener nvmf_listener = 5;
  string location = 6;
  bool is_offline = 7;
  uint32 hash_code = 8;
  ErrInfo err_info = 9;
}

message DnSummary {
  string sock_addr = 1;
  string description = 2;
}

message VdBackend {
  string vd_id = 1;
  string da_name = 2;
  uint32 grp_idx = 3;
  uint32 vd_idx = 4;
  uint64 size = 5;
  BdevQos qos = 6;
  string cntlr_id = 7;
  ErrInfo err_info = 8;
}

message PhysicalDisk {
  string pd_id = 1;
  string pd_name = 2;
  string description = 3;
  bool is_offline = 4;
  uint64 total_size = 5;
  uint64 free_size = 6;
  BdevQos total_qos = 7;
  BdevQos free_qos = 8;
  oneof bdev_type {
    BdevMalloc bdev_malloc = 9;
    BdevAio bdev_aio = 10;
    BdevNvme bdev_nvme = 11;
  }
  ErrInfo err_info = 12;
  repeated VdBackend vd_be_list = 15;
}

message PdSummary {
  string pd_name = 1;
  string description = 2;
}

message ControllerNode {
  string cn_id = 1;
  string sock_addr = 2;
  uint64 version = 3;
  string description = 4;
  NvmfListener nvmf_listener = 5;
  string location = 6;
  bool is_offline = 7;
  uint32 hash_code = 8;
  ErrInfo err_info = 9;
  repeated CntlrFrontend cntlr_fe_list = 10;
}

message CnSummary {
  string sock_addr = 1;
  string description = 2;
}

message VdFrontend {
  string vd_id = 1;
  uint32 vd_idx = 2;
  uint64 size = 3;
  ErrInfo err_info = 4;
}

message GrpFrontend {
  string grp_id = 1;
  uint32 grp_idx = 2;
  uint64 size = 3;
  ErrInfo err_info = 4;
  repeated VdFrontend vd_fe_list = 5;
}

message SnapFrontend {
  string snap_id = 1;
  ErrInfo err_info = 2;
}

message ExpFrontend {
  string exp_id = 1;
  ErrInfo err_info = 2;
}

message CntlrFrontend {
  string cntlr_id = 1;
  string da_name = 2;
  uint32 cntlr_idx = 3;
  bool is_primary = 4;
  ErrInfo err_info = 5;
  repeated GrpFrontend grp_fe_list = 6;
  repeated SnapFrontend snap_fe_list= 7;
  repeated ExpFrontend exp_fe_list = 8;
}

message Controller {
  string cntlr_id = 1;
  string sock_addr = 2;
  uint32 cntlr_idx = 3;
  bool is_primary = 4;
  ErrInfo err_info = 5;
}

message VirtualDisk {
  string vd_id = 1;
  uint32 vd_idx = 2;
  string sock_addr = 3;
  string pd_name = 4;
  uint64 size = 5;
  BdevQos qos = 6;
  ErrInfo be_err_info = 7;
  ErrInfo fe_err_info = 8;
}

message Group {
  string grp_id = 1;
  uint32 grp_idx = 2;
  uint64 size = 3;
  ErrInfo err_info = 4;
  repeated VirtualDisk vd_list = 5;
}

message Snap {
  string snap_id = 1;
  string snap_name = 2;
  string description = 3;
  string ori_name = 4;
  uint64 idx = 5;
  uint64 size = 6;
  ErrInfo err_info = 7;
}

message SnapSummary {
  string snap_name = 1;
  string description = 2;
}

message ExpInfo {
  uint32 cntlr_idx = 1;
  NvmfListener nvmf_listener = 2;
  bool is_offline = 3;
  ErrInfo err_info = 4;
}

message Exporter {
  string exp_id = 1;
  string exp_name = 2;
  string description = 3;
  string initiator_nqn = 4;
  string snap_name = 5;
  string target_nqn = 6;
  string serial_number = 7;
  string model_number = 8;
  repeated ExpInfo exp_info_list = 9;
}

message ExpSummary {
  string exp_name = 1;
  string description = 2;
}

message ExtendPolicy {
  uint64 init_grp_size = 1;
  uint64 max_grp_size = 2;
  uint64 low_water_mark = 3;
}

message DaConf {
  uint64 size = 1;
  BdevQos qos = 2;
  ExtendPolicy extend_policy = 3;
  LvsConf lvs_conf = 4;
  Raid0Conf raid0_conf = 5;
  oneof redundancy {
    Raid1Conf raid1_conf = 6;
  }
}

message DaInfo {
  LvsInfo lvs_info = 1;
  oneof redundancy {
    Raid1Info raid1_info = 2;
  }
}

message DiskArray {
  string da_id = 1;
  string da_name = 2;
  string description = 3;
  DaConf da_conf = 4;
  DaInfo da_info = 5;
  repeated Controller cntlr_list = 6;
  repeated Group grp_list = 7;
}

message DaSummary {
  string da_name = 1;
  string description = 2;
}

message CreateDnRequest {
  string sock_addr = 1;
  string description = 2;
  NvmfListener nvmf_listener = 3;
  string location = 4;
  bool is_offline = 5;
  uint32 hash_code = 6;
}

message CreateDnReply {
  ReplyInfo reply_info = 1;
}

message DeleteDnRequest {
  string sock_addr = 1;
}

message DeleteDnReply {
  ReplyInfo reply_info = 1;
}

message ModifyDnRequest {
  string sock_addr = 1;
  oneof attr {
    string description = 2;
    bool is_offline = 3;
    uint32 hash_code = 4;
  }
}

message ModifyDnReply {
  ReplyInfo reply_info = 1;
}

message ListDnRequest {
  int64 limit = 1;
  string token = 2;
}

message ListDnReply {
  ReplyInfo reply_info = 1;
  string token = 2;
  repeated DnSummary dn_summary_list = 3;
}

message GetDnRequest {
  string sock_addr = 1;
}

message GetDnReply {
  ReplyInfo reply_info = 1;
  DiskNode disk_node = 2;
}

message CreatePdRequest {
  string sock_addr = 1;
  string pd_name = 2;
  string description = 3;
  bool is_offline = 4;
  BdevQos qos = 5;
  oneof bdev_type {
    BdevMalloc bdev_malloc = 6;
    BdevAio bdev_aio = 7;
    BdevNvme bdev_nvme = 8;
  }
}

message CreatePdReply {
  ReplyInfo reply_info = 1;
}

message DeletePdRequest {
  string sock_addr = 1;
  string pd_name = 2;
}

message DeletePdReply {
  ReplyInfo reply_info = 1;
}

message ModifyPdRequest {
  string sock_addr = 1;
  string pd_name = 2;
  oneof attr {
    string description = 3;
    bool is_offline = 4;
  }
}

message ModifyPdReply {
  ReplyInfo reply_info = 1;
}

message ListPdRequest {
  string sock_addr = 1;
}

message ListPdReply {
  ReplyInfo reply_info = 1;
  repeated PdSummary pd_summary_list = 2;
}

message GetPdRequest {
  string sock_addr = 1;
  string pd_name = 2;
}

message GetPdReply {
  ReplyInfo reply_info = 1;
  PhysicalDisk physical_disk = 2;
}

message CreateCnRequest {
  string sock_addr = 1;
  string description = 2;
  NvmfListener nvmf_listener = 3;
  string location = 4;
  bool is_offline = 5;
  uint32 hash_code = 6;
}

message CreateCnReply {
  ReplyInfo reply_info = 1;
}

message DeleteCnRequest {
  string sock_addr = 1;
}

message DeleteCnReply {
  ReplyInfo reply_info = 1;
}

message ModifyCnRequest {
  string sock_addr = 1;
  oneof attr {
    string description = 2;
    bool is_offline = 3;
    uint32 hash_code = 4;
  }
}

message ModifyCnReply {
  ReplyInfo reply_info = 1;
}

message ListCnRequest {
  int64 limit = 1;
  string token = 2;
}

message ListCnReply {
  ReplyInfo reply_info = 1;
  string token = 2;
  repeated CnSummary cn_summary_list = 3;
}

message GetCnRequest {
  string sock_addr = 1;
}

message GetCnReply {
  ReplyInfo reply_info = 1;
  ControllerNode controller_node = 2;
}

message CreateDaRequest {
  string da_name = 1;
  string description = 2;
  uint32 cntlr_cnt = 3;
  DaConf daConf = 4;
}

message CreateDaReply {
  ReplyInfo reply_info = 1;
}

message DeleteDaRequest {
  string da_name = 1;
}

message DeleteDaReply {
  ReplyInfo reply_info = 1;
}

message ModifyDaRequest {
  string da_name = 1;
  oneof attr {
    string description = 2;
  }
}

message ModifyDaReply {
  ReplyInfo reply_info = 1;
}

message ListDaRequest {
  int64 limit = 1;
  string token = 2;
}

message ListDaReply {
  ReplyInfo reply_info = 1;
  string token = 2;
  repeated DaSummary da_summary_list = 3;
}

message GetDaRequest {
  string da_name = 1;
}

message GetDaReply {
  ReplyInfo reply_info = 1;
  DiskArray disk_array = 2;
}

message CreateExpRequest {
  string da_name = 1;
  string exp_name = 2;
  string description = 3;
  string initiator_nqn = 4;
  string snap_name = 5;
}

message CreateExpReply {
  ReplyInfo reply_info = 1;
}

message DeleteExpRequest {
  string da_name = 1;
  string exp_name = 2;
}

message DeleteExpReply {
  ReplyInfo reply_info = 1;
}

message ModifyExpRequest {
  string da_name = 1;
  string exp_name = 2;
  oneof attr {
    string description = 3;
  }
}

message ModifyExpReply {
  ReplyInfo reply_info = 1;
}

message ListExpRequest {
  string da_name = 1;
}

message ListExpReply {
  ReplyInfo reply_info = 1;
  repeated ExpSummary exp_summary_list = 2;
}

message GetExpRequest {
  string da_name = 1;
  string exp_name = 2;
}

message GetExpReply {
  ReplyInfo reply_info = 1;
  Exporter exporter = 2;
}

message CreateSnapRequest {
  string da_name = 1;
  string snap_name = 2;
  string description = 3;
  string ori_name = 4;
  uint64 size = 5;
}

message CreateSnapReply {
  ReplyInfo reply_info = 1;
}

message DeleteSnapRequest {
  string da_name = 1;
  string snap_name = 2;
}

message DeleteSnapReply {
  ReplyInfo reply_info = 1;
}

message ModifySnapRequest {
  string da_name = 1;
  string snap_name = 2;
  oneof attr {
    string description = 3;
  }
}

message ModifySnapReply {
  ReplyInfo reply_info = 1;
}

message ListSnapRequest {
  string da_name = 1;
}

message ListSnapReply {
  ReplyInfo reply_info = 1;
  repeated SnapSummary snap_summary_list = 2;
}

message GetSnapRequest {
  string da_name = 1;
  string snap_name = 2;
}

message GetSnapReply {
  ReplyInfo reply_info = 1;
  Snap snap = 2;
}

message MovingTask {
  string mt_id = 1;
  string mt_name = 2;
  string description = 3;
  uint32 grp_idx = 4;
  uint32 vd_idx = 5;
  string src_sock_addr = 6;
  string src_pd_name = 7;
  string src_vd_id = 8;
  string dst_sock_addr = 9;
  string dst_pd_name = 10;
  TaskDescriptor desc = 11;
  ErrInfo err_info = 12;
  Raid1Conf raid1_conf = 13;
  Raid1Info raid1_info = 14;
}

message MtSummary {
  string mt_name = 1;
  string description = 2;
}

message CreateMtRequest {
  string da_name = 1;
  string mt_name = 2;
  string description = 3;
  uint32 grp_idx = 4;
  uint32 vd_idx = 5;
  string dst_sock_addr = 6;
  string dst_pd_name = 7;
  uint64 keep_seconds = 8;
}

message CreateMtReply {
  ReplyInfo reply_info = 1;
}

message CancelMtRequest {
  string da_name = 1;
  string mt_name = 2;
}

message CancelMtReply {
  ReplyInfo reply_info = 1;
}

message ModifyMtRequest {
  string da_name = 1;
  string mt_name = 2;
  oneof attr {
    string description = 3;
    string keep_seconds = 4;
  }
}

message ModifyMtReply {
  ReplyInfo reply_info = 1;
}

message ListMtRequest {
  string da_name = 1;
}

message ListMtReply {
  ReplyInfo reply_info = 1;
  repeated MtSummary mt_summary_list = 2;
}

message GetMtRequest {
  string da_name = 1;
  string mt_name = 2;
}

message GetMtReply {
  ReplyInfo reply_info = 1;
  MovingTask moving_task = 2;
}

message ImportingTask {
  string it_id = 1;
  string it_name = 2;
  string description = 3;
  NvmfListener src_listener = 4;
  string snap_name = 5;
  TaskDescriptor desc = 6;
  ErrInfo err_info = 7;
  Raid1Conf raid1_conf = 8;
  Raid1Info raid1_info = 9;
}

message ItSummary {
  string it_name = 1;
  string description = 2;
}

message CreateItRequest {
  string da_name = 1;
  string it_name = 2;
  string description = 3;
  NvmfListener src_listener = 4;
  string snap_name = 5;
  string keep_seconds = 6;
}

message CreateItReply {
  ReplyInfo reply_info = 1;
}

message CancelItRequest {
  string da_name = 1;
  string it_name = 2;
}

message CancelItReply {
  ReplyInfo reply_info = 1;
}

message ModifyItRequest {
  string da_name = 1;
  string it_name = 2;
  oneof attr {
    string description = 3;
    string keep_seconds = 4;
  }
}

message ModifyItReply {
  ReplyInfo reply_info = 1;
}

message ListItRequest {
  string da_name = 1;
}

message ListItReply {
  ReplyInfo reply_info = 1;
  repeated ItSummary it_summary_list = 2;
}

message GetItRequest {
  string da_name = 1;
  string it_name = 2;
}

message GetItReply {
  ReplyInfo reply_info = 1;
  ImportingTask importing_task = 2;
}

message ClusterSummary {
  uint64 total_size = 1;
  uint64 free_size = 2;
  uint32 dn_cnt = 3;
  uint32 pd_cnt = 4;
  uint32 cn_cnt = 5;
  uint32 da_cnt = 6;
  uint32 dn_err_cnt = 7;
  uint32 cn_err_cnt = 8;
}

message GetClusterSummaryRequest {
}

message GetClusterSummaryReply {
  ReplyInfo reply_info = 1;
  ClusterSummary cluster_summary = 2;
}
